--- a/emacs.org
+++ b/emacs.org
@@ -1,3 +1,4 @@
+
 #+TITLE: Emacs config
 
 * INIT BASICS                                                 :config:basics:
@@ -40,11 +41,12 @@
     projectile
     auto-complete-c-headers
     auto-complete
-    flymake-haskell-multi
+    ;;flymake-haskell-multi
     all-ext
     swiper
     swiper-helm
-    flycheck)
+    flycheck
+    highline)
 )
 
 (defun packages-installed ()
@@ -479,68 +481,68 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 
 ** dired
 #+begin_src emacs-lisp
-(require 'dired+)
-(setq dired-dwim-target t)
+;;(require 'dired+)
+;;(setq dired-dwim-target t)
 
-(define-key dired-mode-map ";" 'diredp-up-directory)
+;;(define-key dired-mode-map ";" 'diredp-up-directory)
 
-(setq dired-listing-switches "-alk")
+;; (setq dired-listing-switches "-alk")
 
-(defun open-in-external-app ()
-  "Open the current file or dired marked files in external app."
-  (interactive)
-  (let ( doIt
-         (myFileList
-          (cond
-           ((string-equal major-mode "dired-mode") (dired-get-marked-files))
-           (t (list (buffer-file-name))) ) ) )
+;; (defun open-in-external-app ()
+;;   "Open the current file or dired marked files in external app."
+;;   (interactive)
+;;   (let ( doIt
+;;          (myFileList
+;;           (cond
+;;            ((string-equal major-mode "dired-mode") (dired-get-marked-files))
+;;            (t (list (buffer-file-name))) ) ) )
 
-    (setq doIt (if (<= (length myFileList) 5)
-                   t
-                 (y-or-n-p "Open more than 5 files?") ) )
+;;     (setq doIt (if (<= (length myFileList) 5)
+;;                    t
+;;                  (y-or-n-p "Open more than 5 files?") ) )
 
-    (when doIt
-      (cond
-       ((string-equal system-type "windows-nt")
-        (mapc (lambda (fPath) (w32-shell-execute "open" (replace-regexp-in-string "/" "\\" fPath t t)) ) myFileList)
-        )
-       ((string-equal system-type "darwin")
-        (mapc (lambda (fPath) (shell-command (format "open \"%s\"" fPath)) )  myFileList) )
-       ((string-equal system-type "gnu/linux")
-        (mapc (lambda (fPath) (let ((process-connection-type nil)) (start-process "" nil "xdg-open" fPath)) ) myFileList) ) ) ) ) )
+;;     (when doIt
+;;       (cond
+;;        ((string-equal system-type "windows-nt")
+;;         (mapc (lambda (fPath) (w32-shell-execute "open" (replace-regexp-in-string "/" "\\" fPath t t)) ) myFileList)
+;;         )
+;;        ((string-equal system-type "darwin")
+;;         (mapc (lambda (fPath) (shell-command (format "open \"%s\"" fPath)) )  myFileList) )
+;;        ((string-equal system-type "gnu/linux")
+;;         (mapc (lambda (fPath) (let ((process-connection-type nil)) (start-process "" nil "xdg-open" fPath)) ) myFileList) ) ) ) ) )
 #+end_src
 
 ** Auto complete
 #+begin_src emacs-lisp
-(require 'auto-complete)
-(require 'auto-complete-config)
+;; (require 'auto-complete)
+;; (require 'auto-complete-config)
 
-(define-key control-semi-map (kbd "n") 'auto-complete)
-(define-key control-semi-map (kbd "C-n") 'dabbrev-expand)
+;; (define-key control-semi-map (kbd "n") 'auto-complete)
+;; (define-key control-semi-map (kbd "C-n") 'dabbrev-expand)
 
-(global-auto-complete-mode t)
-(setq ac-use-quick-help nil)
-(setq ac-auto-show-menu nil)
+;; (global-auto-complete-mode t)
+;; (setq ac-use-quick-help nil)
+;; (setq ac-auto-show-menu nil)
 
-(define-key ac-menu-map "\C-n" 'ac-next)
-(define-key ac-menu-map "\C-p" 'ac-previous)
+;; (define-key ac-menu-map "\C-n" 'ac-next)
+;; (define-key ac-menu-map "\C-p" 'ac-previous)
 
-(setq
-      ac-auto-show-menu nil
-      ac-candidate-limit nil
-      ac-delay 20
-      ac-disable-facess (quote (font-lock-comment-face font-lock-doc-face))
-      ac-ignore-case 'smart
-      ac-menu-height 15
-      ac-quick-help-delay 1.5
-      ac-quick-help-prefer-pos-tip t
-      ac-use-quick-help t
-)
+;; (setq
+;;       ac-auto-show-menu nil
+;;       ac-candidate-limit nil
+;;       ac-delay 20
+;;       ac-disable-facess (quote (font-lock-comment-face font-lock-doc-face))
+;;       ac-ignore-case 'smart
+;;       ac-menu-height 15
+;;       ac-quick-help-delay 1.5
+;;       ac-quick-help-prefer-pos-tip t
+;;       ac-use-quick-help t
+;; )
 
-(defun auto-complete-mode-maybe ()
-"AC in all modes"
-  (unless (minibufferp (current-buffer))
-    (auto-complete-mode 1)))
+;; (defun auto-complete-mode-maybe ()
+;; "AC in all modes"
+;;   (unless (minibufferp (current-buffer))
+;;     (auto-complete-mode 1)))
 
 #+end_src
 
@@ -625,13 +627,13 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 
 *** Haskell
  #+begin_src emacs-lisp
-(require 'flymake-haskell-multi)
-(add-hook 'haskell-mode-hook
-	  (lambda()
+;;(require 'flymake-haskell-multi)
+;;(add-hook 'haskell-mode-hook
+;;	  (lambda()
 	   ;; (haskell-mode 1)
-	    (haskell-indent-mode 1)
+;;	    (haskell-indent-mode 1)
 	    ;;(flymake-haskell-multi-load 1)
-	    ))
+;;	    ))
 #+end_src
 *** indent modes
 #+begin_src emacs-lisp
