--- a/emacs.org
+++ b/emacs.org
@@ -472,6 +472,8 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 (require 'dired)
 (define-key dired-mode-map (kbd "l") 'dired-up-directory)
 (define-key dired-mode-map (kbd "r") 'dired-do-redisplay)
+
+(setq dired-listing-switches "-alFh")
 #+end_src
 
 
