--- a/emacs.org
+++ b/emacs.org
@@ -30,19 +30,18 @@
     dired-toggle-sudo
     multi-term
     iasm-mode
-    matlab-mode
     haskell-mode
     magit
-    auto-complete-clang
     helm
     helm-swoop
-    bind-key
-    projectile
-    auto-complete-c-headers
-    auto-complete
-    all-ext
     swiper
     swiper-helm
+    bind-key
+    projectile
+    auto-complete
+    auto-complete-c-headers
+    auto-complete-clang
+    all-ext
     flycheck
     highline)
 )
@@ -519,28 +518,10 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 (define-key control-semi-map (kbd "C-n") 'dabbrev-expand)
 
 (global-auto-complete-mode t)
-(setq ac-use-quick-help nil)
-(setq ac-auto-show-menu nil)
 
-(define-key ac-menu-map "\C-n" 'ac-next)
-(define-key ac-menu-map "\C-p" 'ac-previous)
+(setq ac-use-menu-map t)
 
-(setq
-      ac-auto-show-menu nil
-      ac-candidate-limit nil
-      ac-delay 20
-      ac-disable-facess (quote (font-lock-comment-face font-lock-doc-face))
-      ac-ignore-case 'smart
-      ac-menu-height 15
-      ac-quick-help-delay 1.5
-      ac-quick-help-prefer-pos-tip t
-      ac-use-quick-help t
-)
-
-(defun auto-complete-mode-maybe ()
-"AC in all modes"
-  (unless (minibufferp (current-buffer))
-    (auto-complete-mode 1)))
+(ac-config-default)
 
 #+end_src
 
@@ -691,7 +672,6 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 	("\\.ref$" . org-mode)
 	("\\.ref.gpg$" . org-mode)
 	("\\.notes$" . org-mode)
-
 	("\\.pdf\\'" . doc-view-mode)
 
 	;;programming modes
@@ -700,19 +680,13 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 	("\\.c\\'" . c-mode)
 	("\\.cpp\\'" . c++-mode)
 	("\\.h\\'" . c++-mode)
-	;;("\\.lua\\'" . lua-mode)
 	("\\.java\\'" . java-mode)
-
 	("\\.s\\'" . c++-mode)
 	("\\.mc\\'" . c++-mode)
-
 	("\\.el\\'" . emacs-lisp-mode)
-
 	("\\.vert\\'" . glsl-mode)
 	("\\.frag\\'" . glsl-mode)
 	("\\.glsl\\'" . glsl-mode)
-
-	("\\.m\\'" . matlab-mode)
 	))
 #+end_src
 
