adding  Thierry Volpiatto's dired extensions for more colorful dired output

--- a/emacs.org
+++ b/emacs.org
@@ -473,6 +473,8 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 (define-key dired-mode-map (kbd "r") 'dired-do-redisplay)
 
 (setq dired-listing-switches "-alFh")
+
+(require 'dired-extension)
 #+end_src
 
 
