--- a/emacs.org
+++ b/emacs.org
@@ -31,19 +31,21 @@
     haskell-mode
     magit
     helm
-    helm-projectile
+    helm-flx
+    ;;helm-projectile
     helm-swoop
     helm-descbinds
     swiper
     swiper-helm
     bind-key
-    projectile
+    ;;projectile
     auto-complete
     auto-complete-c-headers
     auto-complete-clang
     all-ext
     flycheck
-    highline)
+    ;;highline
+)
 )
 
 (defun packages-installed ()
@@ -89,7 +91,7 @@
 
 (customize-set-variable 'bmkp-last-as-first-bookmark-file "~/.emacs.d/bookmarks" )
 
-(custom-set-faces '(highline-face ((t (:background "#303030")))))
+;;(custom-set-faces '(highline-face ((t (:background "#303030")))))
 #+END_SRC
 
 ** Keyboard
@@ -323,137 +325,137 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 
 ** projectile
 #+begin_src emacs-lisp
-(require 'cl)
-(require 'helm)
+;; (require 'cl)
+;; (require 'helm)
 
-(projectile-global-mode 1)
+;; (projectile-global-mode 1)
 
-(setq projectile-enable-caching t)
-;; Custom helm grep
-(defun helm-megagrep (targets &optional recurse zgrep exts)
-  (let* ((exts (and recurse
-                    ;; [FIXME] I could handle this from helm-walk-directory.
-                    (not zgrep) ; zgrep doesn't handle -r opt.
-                    (not (helm-grep-use-ack-p :where 'recursive))
-                    (or exts (helm-grep-get-file-extensions targets))))
-         (include-files (and exts
-                             (mapconcat #'(lambda (x)
-                                            (concat "--include="
-                                                    (shell-quote-argument x)))
-                                        (if (> (length exts) 1)
-                                            (remove "*" exts)
-                                          exts) " ")))
-         (types (and (not include-files)
-                     (not zgrep)
-                     recurse
-                     ;; When %e format spec is not specified
-                     ;; ignore types and do not prompt for choice.
-                     (string-match "%e" helm-grep-default-command)
-                     (helm-grep-read-ack-type)))
-         (follow (and helm-follow-mode-persistent
-                      (assoc-default 'follow helm-source-grep))))
-    ;; When called as action from an other source e.g *-find-files
-    ;; we have to kill action buffer.
-    (when (get-buffer helm-action-buffer)
-      (kill-buffer helm-action-buffer))
-    ;; If `helm-find-files' haven't already started,
-    ;; give a default value to `helm-ff-default-directory'.
-
-
-    ;; We need to store these vars locally
-    ;; to pass infos later to `helm-resume'.
-    (with-helm-temp-hook 'helm-after-initialize-hook
-      (with-helm-buffer
-        (set (make-local-variable 'helm-zgrep-recurse-flag)
-             (and recurse zgrep))
-        ;;(set (make-local-variable 'helm-grep-last-targets) targets)
-        (set (make-local-variable 'helm-grep-include-files)
-             (or include-files types))
-        (set (make-local-variable 'helm-grep-in-recurse) recurse)
-        (set (make-local-variable 'helm-grep-use-zgrep) zgrep)
-
-        (set (make-local-variable 'helm-grep-default-command)
-             (cond (helm-grep-use-zgrep helm-default-zgrep-command)
-                   (helm-grep-in-recurse helm-grep-default-recurse-command)
-                   ;; When resuming the local value of
-                   ;; `helm-grep-default-command' is used, only git-grep
-                   ;; should need this.
-                   (t helm-grep-default-command)))))
-    ;; Setup the source.
-    (setq helm-source-grep
-          `((name . ,(if zgrep "Zgrep" (capitalize (if recurse
-                                                       (helm-grep-command t)
-                                                     (helm-grep-command)))))
-
-            (header-name . (lambda (name)
-                             (concat name "(C-c ? Help)")))
-            (candidates-process . helm-grep-collect-candidates)
-            (filter-one-by-one . helm-grep-filter-one-by-one)
-            (candidate-number-limit . 50000)
-            (no-matchplugin)
-            (nohighlight)
-            (mode-line . helm-grep-mode-line-string)
-            ;; We need to specify keymap here and as :keymap arg [1]
-            ;; to make it available in further resuming.
-            (keymap . ,helm-grep-map)
-            (history . ,'helm-grep-history)
-            (action . ,(delq
-                        nil
-                        `(("Find File" . helm-grep-action)
-                          ("Find file other frame" . helm-grep-other-frame)
-                          ,(and (locate-library "elscreen")
-                                '("Find file in Elscreen"
-                                  . helm-grep-jump-elscreen))
-                          ("Save results in grep buffer" . helm-grep-save-results)
-                          ("Find file other window" . helm-grep-other-window))))
-            (persistent-action . helm-grep-persistent-action)
-            (persistent-help . "Jump to line (`C-u' Record in mark ring)")
-            (requires-pattern . 2)))
-    (and follow (helm-attrset 'follow follow helm-source-grep))
-    (helm
-     :sources '(helm-source-grep)
-     :buffer (format "*project root helm %s*" (helm-grep-command))
-     :default-directory default-directory
-     :keymap helm-grep-map ; [1]
-     :history 'helm-grep-history
-     :input  (thing-at-point 'symbol)
-     :truncate-lines t)))
-
-(defun hgrep()
-  (interactive)
-  (helm-megagrep nil
-		 '(10)
-		 nil
-		 '("*.cpp" "*.h" ".c" ".cc" "*.lua" "*.py" "*.pl" "*.xml" "*.el" ".org" ) ;; Only interesting files
-		 ))
+;; (setq projectile-enable-caching t)
+;; ;; Custom helm grep
+;; (defun helm-megagrep (targets &optional recurse zgrep exts)
+;;   (let* ((exts (and recurse
+;;                     ;; [FIXME] I could handle this from helm-walk-directory.
+;;                     (not zgrep) ; zgrep doesn't handle -r opt.
+;;                     (not (helm-grep-use-ack-p :where 'recursive))
+;;                     (or exts (helm-grep-get-file-extensions targets))))
+;;          (include-files (and exts
+;;                              (mapconcat #'(lambda (x)
+;;                                             (concat "--include="
+;;                                                     (shell-quote-argument x)))
+;;                                         (if (> (length exts) 1)
+;;                                             (remove "*" exts)
+;;                                           exts) " ")))
+;;          (types (and (not include-files)
+;;                      (not zgrep)
+;;                      recurse
+;;                      ;; When %e format spec is not specified
+;;                      ;; ignore types and do not prompt for choice.
+;;                      (string-match "%e" helm-grep-default-command)
+;;                      (helm-grep-read-ack-type)))
+;;          (follow (and helm-follow-mode-persistent
+;;                       (assoc-default 'follow helm-source-grep))))
+;;     ;; When called as action from an other source e.g *-find-files
+;;     ;; we have to kill action buffer.
+;;     (when (get-buffer helm-action-buffer)
+;;       (kill-buffer helm-action-buffer))
+;;     ;; If `helm-find-files' haven't already started,
+;;     ;; give a default value to `helm-ff-default-directory'.
 
 
-(defun cpp-root-grep()
-  (interactive)
-  (helm-megagrep nil
-		 '(10)
-		 nil
-		 '("*.cpp" "*.h" ".c" ".cc" ) ;; Only interesting files
-		 ))
+;;     ;; We need to store these vars locally
+;;     ;; to pass infos later to `helm-resume'.
+;;     (with-helm-temp-hook 'helm-after-initialize-hook
+;;       (with-helm-buffer
+;;         (set (make-local-variable 'helm-zgrep-recurse-flag)
+;;              (and recurse zgrep))
+;;         ;;(set (make-local-variable 'helm-grep-last-targets) targets)
+;;         (set (make-local-variable 'helm-grep-include-files)
+;;              (or include-files types))
+;;         (set (make-local-variable 'helm-grep-in-recurse) recurse)
+;;         (set (make-local-variable 'helm-grep-use-zgrep) zgrep)
+
+;;         (set (make-local-variable 'helm-grep-default-command)
+;;              (cond (helm-grep-use-zgrep helm-default-zgrep-command)
+;;                    (helm-grep-in-recurse helm-grep-default-recurse-command)
+;;                    ;; When resuming the local value of
+;;                    ;; `helm-grep-default-command' is used, only git-grep
+;;                    ;; should need this.
+;;                    (t helm-grep-default-command)))))
+;;     ;; Setup the source.
+;;     (setq helm-source-grep
+;;           `((name . ,(if zgrep "Zgrep" (capitalize (if recurse
+;;                                                        (helm-grep-command t)
+;;                                                      (helm-grep-command)))))
+
+;;             (header-name . (lambda (name)
+;;                              (concat name "(C-c ? Help)")))
+;;             (candidates-process . helm-grep-collect-candidates)
+;;             (filter-one-by-one . helm-grep-filter-one-by-one)
+;;             (candidate-number-limit . 50000)
+;;             (no-matchplugin)
+;;             (nohighlight)
+;;             (mode-line . helm-grep-mode-line-string)
+;;             ;; We need to specify keymap here and as :keymap arg [1]
+;;             ;; to make it available in further resuming.
+;;             (keymap . ,helm-grep-map)
+;;             (history . ,'helm-grep-history)
+;;             (action . ,(delq
+;;                         nil
+;;                         `(("Find File" . helm-grep-action)
+;;                           ("Find file other frame" . helm-grep-other-frame)
+;;                           ,(and (locate-library "elscreen")
+;;                                 '("Find file in Elscreen"
+;;                                   . helm-grep-jump-elscreen))
+;;                           ("Save results in grep buffer" . helm-grep-save-results)
+;;                           ("Find file other window" . helm-grep-other-window))))
+;;             (persistent-action . helm-grep-persistent-action)
+;;             (persistent-help . "Jump to line (`C-u' Record in mark ring)")
+;;             (requires-pattern . 2)))
+;;     (and follow (helm-attrset 'follow follow helm-source-grep))
+;;     (helm
+;;      :sources '(helm-source-grep)
+;;      :buffer (format "*project root helm %s*" (helm-grep-command))
+;;      :default-directory default-directory
+;;      :keymap helm-grep-map ; [1]
+;;      :history 'helm-grep-history
+;;      :input  (thing-at-point 'symbol)
+;;      :truncate-lines t)))
+
+;; (defun hgrep()
+;;   (interactive)
+;;   (helm-megagrep nil
+;; 		 '(10)
+;; 		 nil
+;; 		 '("*.cpp" "*.h" ".c" ".cc" "*.lua" "*.py" "*.pl" "*.xml" "*.el" ".org" ) ;; Only interesting files
+;; 		 ))
 
 
-;; Prevent issues with the Windows null device (NUL)
-;; when using cygwin find with rgrep.
-(defadvice grep-compute-defaults (around grep-compute-defaults-advice-null-device)
-  "Use cygwin's /dev/null as the null-device."
-  (let ((null-device "/dev/null"))
-	ad-do-it))
-(ad-activate 'grep-compute-defaults)
+;; (defun cpp-root-grep()
+;;   (interactive)
+;;   (helm-megagrep nil
+;; 		 '(10)
+;; 		 nil
+;; 		 '("*.cpp" "*.h" ".c" ".cc" ) ;; Only interesting files
+;; 		 ))
 
 
-(defun projectile-helm-grep-root-src ()
-  (interactive)
-  (projectile-with-default-dir (projectile-project-root)
-    (call-interactively 'hgrep )))
+;; ;; Prevent issues with the Windows null device (NUL)
+;; ;; when using cygwin find with rgrep.
+;; (defadvice grep-compute-defaults (around grep-compute-defaults-advice-null-device)
+;;   "Use cygwin's /dev/null as the null-device."
+;;   (let ((null-device "/dev/null"))
+;; 	ad-do-it))
+;; (ad-activate 'grep-compute-defaults)
 
-(define-key projectile-command-map (kbd "p") 'projectile-helm-grep-root-src)
-(define-key projectile-command-map (kbd "j") 'hgrep)
-(define-key projectile-command-map (kbd "J") 'cpp-root-grep)
+
+;; (defun projectile-helm-grep-root-src ()
+;;   (interactive)
+;;   (projectile-with-default-dir (projectile-project-root)
+;;     (call-interactively 'hgrep )))
+
+;; (define-key projectile-command-map (kbd "p") 'projectile-helm-grep-root-src)
+;; (define-key projectile-command-map (kbd "j") 'hgrep)
+;; (define-key projectile-command-map (kbd "J") 'cpp-root-grep)
 
 
 #+end_src
@@ -589,6 +591,7 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 
 (add-to-list 'find-file-not-found-functions #'my-create-non-existent-directory)
 
+(setq gc-cons-threshold 20000000)
 #+end_src
 
 ** Programming                                :config:behaviour:programming:
@@ -702,6 +705,7 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 #+begin_src emacs-lisp
 (require 'helm-config)
 
+(helm-flx-mode +1)
 
 (global-set-key (kbd "C-j") 'helm-mini)
 (define-key org-mode-map (kbd "C-j") 'helm-mini)
@@ -780,8 +784,8 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 
 ** highline
 #+begin_src emacs-lisp
-(require 'highline)
-(customize-set-variable 'global-highline-mode t)
+;; (require 'highline)
+;; (customize-set-variable 'global-highline-mode nil)
 
 #+end_src
 
