updating build instructions

--- a/emacs.org
+++ b/emacs.org
@@ -782,6 +782,8 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 
 * NOTES
 ** building emacs on Linux
+./autogen.sh
+
 ./configure --without-toolkit-scroll-bars --without-sound --enable-link-time-optimization --without-pop --without-xpm --without-jpeg --without-tiff --without-gif --without-png --without-rsvg --without-imagemagick --without-xaw3d --without-compress-install --without-libsystemd CFLAGS='-Ofast -march=native'
 
 make
