adding better check for when (package-initialize) should be called

--- a/emacs.org
+++ b/emacs.org
@@ -13,8 +13,13 @@
 			 ("marmalade" . "http://marmalade-repo.org/packages/")
 			 ("melpa" . "http://melpa.milkbox.net/packages/")))
 
+
+
+
 ;; not needed since emacs 27
-(if (< emacs-major-version 27) (package-initialize))
+(when (not package--initialized) (package-initialize) )
+
+
 
 #+end_src
 
