1. removing some unused code 2. adding commented out swift mode

--- a/emacs.org
+++ b/emacs.org
@@ -166,26 +166,6 @@
 (bind-key* "M-u" 'backward-word)
 (bind-key* "M-o" 'forward-word)
 
-(defun nope ()
-(interactive)
-  (dotimes (number 3)
-    (message "NOPE")
-    (sleep-for 0.1)
-    (message "    NOPE!")
-    (sleep-for 0.1)
-    (message "        NOPE!")
-    (sleep-for 0.1)
-  )
-(message ":-)")
-)
-
-;; yo, these keys have better alternatives. Use them!
-;;(bind-key "C-b" 'nope)
-;;(bind-key "M-f" 'nope)
-;;(bind-key "M-b" 'nope)
-;;(bind-key* "C-a" 'nope)
-;;(bind-key* "C-z" 'nope)
-
 (bind-key* "C-a" 'Control-X-prefix)
 
 (bind-key* "C-q" 'beginning-of-line)
@@ -780,3 +760,148 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 
 (message "emacs.org : done loading!")
 #+end_src
+
+* HACKS
+** swift
+#+begin_src emacs-lisp
+
+;; (global-set-key (kbd "ESC") 'global-swift-mode)
+
+;; (define-prefix-command 'swift-semi-command-map)
+
+;; (define-key swift-semi-command-map (kbd "1") 'zygospore-toggle-delete-other-windows)
+;; (define-key swift-semi-command-map (kbd "2") 'split-window-below)
+;; (define-key swift-semi-command-map (kbd "3") 'split-window-right)
+
+;;  (define-key swift-semi-command-map (kbd "j")     
+;;  (lambda ()
+;;  (interactive)
+;;      (let ((x (assq 'swift-mode minor-mode-map-alist)))
+;;      (setq minor-mode-map-ali (delete x minor-mode-map-alist) )
+;;      (helm-mini)
+;;      (setq minor-mode-map-alist (cons x minor-mode-map-alist))))
+
+;;      )
+
+
+;;  (define-key swift-semi-command-map (kbd ";")     
+;;  (lambda ()
+;;  (interactive)
+;;      (let ((x (assq 'swift-mode minor-mode-map-alist)))
+
+;;      (setq minor-mode-map-alist (delete x minor-mode-map-alist) )
+;;      (swiper-helm)
+;;      (setq minor-mode-map-alist (cons x minor-mode-map-alist)))))
+    
+;;  (define-key swift-semi-command-map (kbd "m")     
+;;  (lambda ()
+;;  (interactive)
+;;      (let ((x (assq 'swift-mode minor-mode-map-alist)))
+
+;;      (setq minor-mode-map-alist (delete x minor-mode-map-alist) )
+;;      (helm-swoop)
+;;      (setq minor-mode-map-alist (cons x minor-mode-map-alist)))))
+
+;;  (define-key swift-semi-command-map (kbd "s")     
+;;  (lambda ()
+;;  (interactive)
+;;      (let ((x (assq 'swift-mode minor-mode-map-alist)))
+
+;;      (setq minor-mode-map-alist (delete x minor-mode-map-alist) )
+;;      (helm-semantic-or-imenu "")
+;;      (setq minor-mode-map-alist (cons x minor-mode-map-alist)))))
+
+;;  (define-key swift-semi-command-map (kbd "l")     
+;;  (lambda ()
+;;  (interactive)
+;;      (let ((x (assq 'swift-mode minor-mode-map-alist)))
+
+;;      (setq minor-mode-map-alist (delete x minor-mode-map-alist) )
+;;      (execute-extended-command)
+;;      (setq minor-mode-map-alist (cons x minor-mode-map-alist)))))
+
+;;  (define-key swift-semi-command-map (kbd "C-l")     
+;;  (lambda ()
+;;  (interactive)
+;;      (let ((x (assq 'swift-mode minor-mode-map-alist)))
+
+;;      (setq minor-mode-map-alist (delete x minor-mode-map-alist) )
+;;      (helm-M-x)
+;;      (setq minor-mode-map-alist (cons x minor-mode-map-alist)))))
+
+;; (defvar swift-command-map
+;;   (let ((map (make-keymap)))
+;;     (define-key map (kbd "p") 'previous-line)
+;;     (define-key map (kbd "n") 'next-line)
+;;     (define-key map (kbd "o") 'forward-char)
+;;     (define-key map (kbd "u") 'backward-char)
+
+;;      (define-key map (kbd "j")
+;;      (lambda ()
+;;      (interactive)
+;;      (let ((x (assq 'swift-mode minor-mode-map-alist)))
+
+;;      (setq minor-mode-map-alist (delete x minor-mode-map-alist) )
+;;      (helm-mini)
+;;      (setq minor-mode-map-alist (cons x minor-mode-map-alist)))))
+    
+;;     (define-key map (kbd "f") 'exchange-point-and-mark)
+
+;;     (define-key map (kbd "g") 'keyboard-quit)
+
+;;     (define-key map (kbd "l") 'recenter-top-bottom)
+;;     (define-key map (kbd "SPC") 'set-mark-command)
+
+;;     (define-key map (kbd "k") 'kill-line)
+;;     (define-key map (kbd "m") 'newline)
+
+;;     (define-key map (kbd "q") 'beginninswift-of-line)
+;;     (define-key map (kbd "w") 'back-to-indentation)
+;;     (define-key map (kbd "e") 'end-of-line)
+
+;;     (define-key map (kbd "c") 'kill-rinswift-save)
+;;     (define-key map (kbd "v") 'yank)
+;;     (define-key map (kbd "x") 'kill-region)
+
+;;     (define-key map (kbd "3") 'windmove-right)
+;;     (define-key map (kbd "2") 'windmove-up)
+;;     (define-key map (kbd ";") 'swift-semi-command-map)
+
+;;     (define-key map (kbd "2") 'windmove-up)
+;;     (define-key map (kbd ";") 'swift-semi-command-map)
+;;     map))
+
+
+;; (define-minor-mode swift-mode
+;;        "Toggle G editing mode."
+;;       ;; The initial value.
+;;       :init-value nil
+;;       ;; The indicator for the mode line.
+;;       :lighter " SWIFT"
+;;       ;; The minor mode bindings.
+;;       :keymap swift-command-map
+
+;; (setq swift-map (assq 'swift-mode minor-mode-map-alist))
+
+;; ;; (message swift-map);;aaq
+      
+;; (if (bound-and-true-p swift-mode)
+;;     (progn 
+;;     (custom-set-faces '(cursor ((t (:background "blue")))))
+;;     (custom-set-faces '(mode-line ((t (:background "SlateBlue4")))))
+;;     )
+
+;;     (progn
+;;     (custom-set-faces '(cursor ((t (:background "DarkOrange1")))))
+;;     (custom-set-faces '(mode-line ((t (:background "#444444")))))
+;;     )
+;; )
+;; )
+
+
+;; (define-globalized-minor-mode global-swift-mode swift-mode
+;;   swift-mode
+;;   :init-value nil
+;;   )
+#+end_src
+
